--- a/crm_customer_request/views/customer_request.xml
+++ b/crm_customer_request/views/customer_request.xml
@@ -61,11 +61,24 @@
             </field>
         </record>
 
-        <record id="action_customer_request" model="ir.actions.act_window">
+        <record id="action_crm_customer_request" model="ir.actions.act_window">
             <field name="name">Customer Requests</field>
             <field name="res_model">crm.customer.request</field>
             <field name="view_mode">tree,kanban,form</field>
             <field name="context">{'create': False, 'edit': False, 'delete': False}</field>
+        </record>
+
+        <record id="menu_opportunity" model="ir.ui.menu">
+            <field name="name">Opportunity</field>
+            <field name="action" ref="action_opportunity"/>
+            <field name="sequence" eval="20"/>
+        </record>
+
+        <record id="menu_crm_customer_request" model="ir.ui.menu">
+            <field name="name">Manage Customer Requests</field>
+            <field name="action" ref="action_customer_request"/>
+            <field name="sequence" eval="30"/>
+            <field name="parent_id" ref="menu_opportunity"/>
         </record>
     </data>
 </odoo>
