--- a/crm_customer_request/views/customer_request.xml
+++ b/crm_customer_request/views/customer_request.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <record id="view_crm_customer_request_tree" model="ir.ui.view">
+        <record id="view_customer_request_tree" model="ir.ui.view">
 		    <field name="name">crm.customer.request.tree</field>
 		    <field name="model">crm.customer.request</field>
 		    <field name="arch" type="xml">
@@ -14,7 +14,7 @@
 	    </record>
 
         
-        <record id="view_crm_customer_request_kanban" model="ir.ui.view">
+        <record id="view_customer_request_kanban" model="ir.ui.view">
             <field name="name">crm.customer.request.kanban</field>
             <field name="model">crm.customer.request</field>
             <field name="arch" type="xml">
@@ -43,12 +43,11 @@
             </field>
         </record>
 
-        <record id="view_crm_customer_request_form" model="ir.ui.view">
+        <record id="view_customer_request_form" model="ir.ui.view">
             <field name="name">crm.customer.request.form</field>
             <field name="model">crm.customer.request</field>
             <field name="arch" type="xml">
                 <form>
-                    <field name="name"/>
                     <sheet>
                         <group>
                             <field name="product_id"/>
@@ -61,7 +60,7 @@
             </field>
         </record>
 
-        <record id="action_crm_customer_request" model="ir.actions.act_window">
+        <record id="action_customer_request" model="ir.actions.act_window">
             <field name="name">Customer Requests</field>
             <field name="res_model">crm.customer.request</field>
             <field name="view_mode">tree,kanban,form</field>
@@ -70,15 +69,40 @@
 
         <record id="menu_opportunity" model="ir.ui.menu">
             <field name="name">Opportunity</field>
-            <field name="action" ref="action_opportunity"/>
             <field name="sequence" eval="20"/>
         </record>
 
-        <record id="menu_crm_customer_request" model="ir.ui.menu">
+        <record id="menu_customer_request" model="ir.ui.menu">
             <field name="name">Manage Customer Requests</field>
             <field name="action" ref="action_customer_request"/>
             <field name="sequence" eval="30"/>
             <field name="parent_id" ref="menu_opportunity"/>
         </record>
+
+        <menuitem id="crm_customer_request_root"
+		name="CRM Customer Request"
+		sequence="10"/>
+
+        <menuitem id="customer_request_root"
+		name="Customer Request"
+		parent="crm_customer_request_root"
+		sequence="10"/>
+
+        <menuitem id="customer_request"
+		name="Customer Request"
+		parent="crm_customer_request_root"
+		action="action_customer_request"
+		sequence="10"/>
+
+        <menuitem id="menu_opportunity_root"
+		name="opportunity"
+		parent="customer_request_root"
+		sequence="10"/>
+
+	    <menuitem id="menu_customer_request"
+		name="Customer Request"
+		parent="menu_opportunity_root"
+		action="action_customer_request"
+		sequence="10"/>
     </data>
 </odoo>
