change logic, fix bug
change logic, fix bug

--- a/crm_customer_request/views/crm_lead_form.xml
+++ b/crm_customer_request/views/crm_lead_form.xml
@@ -1,20 +1,72 @@
 <odoo>
     <data>
-        <record id="view_crm_lead_form" model="ir.ui.view">
+        <record id="crm_lead_view_form" model="ir.ui.view">
             <field name="name">crm.lead.form.inherit</field>
             <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="view_crm_customer_request_form"/>
+<!--            <field name="inherit_id" ref="view_customer_request_form"/> -->
             <field name="arch" type="xml">
-                <xpath expr="//sheet/notebook/page[@name='leads']" position="inside">
-                    <page string="Customer Requests">
-                        <field name="request_ids"/>
-                        <field name="total_sales"/>
-                        <field name="expected_revenue"/>
-                    </page>
-                </xpath>
+                <form>
+                    <notebook>
+                        <page string="Customer Requests" position="before">
+                            <field name="request_ids"/>
+                            <field name="total_sales"/>
+                            <field name="expected_revenue"/>
+                        </page>
+                    </notebook>
+                    <notebook>
+                        <field name="request_line_ids"/>
+                    </notebook>
+                </form>
+            </field>
+        </record>
+        
+        <record id="crm_lead_view_kanban" model="ir.ui.view">
+            <field name="name">crm.lead.kanban</field>
+            <field name="model">crm.lead</field>
+            <field name="arch" type="xml">
+                <kanban>
+                    <field name="request_ids"/>
+                    <field name="total_sales"/>
+                    <field name="expected_revenue"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_global_click">
+                                <div class="oe_kanban_details">
+                                    <ul>
+                                        <li>
+                                            Product_id : <field name="total_sales"/>
+                                        </li>
+                                        <li>
+                                            Opportunity_id : <field name="expected_revenue"/>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
             </field>
         </record>
 
+        <record id="crm_lead_view_tree" model="ir.ui.view">
+		    <field name="name">crm.lead.tree</field>
+		    <field name="model">crm.lead</field>
+		    <field name="arch" type="xml">
+			    <tree>
+				    <field name="request_ids"/>
+                    <field name="total_sales"/>
+                    <field name="expected_revenue"/>
+			    </tree>
+		    </field>
+	    </record>
+
+        <record id="crm_lead_action" model="ir.actions.act_window">
+            <field name="name">Crm Lead</field>
+            <field name="res_model">crm.lead</field>
+            <field name="view_mode">tree,kanban,form</field>
         </record>
+
+        <menuitem id="crm_lead_menu" name="Crm Lead"  parent="crm.crm_menu_root"
+                  action="crm_lead_action"/>
     </data>
-<odoo>
+</odoo>
