--- a/crm_customer_request/views/customer_request.xml
+++ b/crm_customer_request/views/customer_request.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <record id="view_customer_request_tree" model="ir.ui.view">
+        <record id="customer_request_view_tree" model="ir.ui.view">
 		    <field name="name">crm.customer.request.tree</field>
 		    <field name="model">crm.customer.request</field>
 		    <field name="arch" type="xml">
@@ -9,12 +9,13 @@
 				    <field name="opportunity_id"/>
 				    <field name="date"/>
                     <field name="qty"/>
+                    <field name="description"/>
 			    </tree>
 		    </field>
 	    </record>
 
         
-        <record id="view_customer_request_kanban" model="ir.ui.view">
+        <record id="customer_request_view_kanban" model="ir.ui.view">
             <field name="name">crm.customer.request.kanban</field>
             <field name="model">crm.customer.request</field>
             <field name="arch" type="xml">
@@ -23,6 +24,7 @@
                     <field name="opportunity_id"/>
                     <field name="date"/>
                     <field name="qty"/>
+                    <field name="description"/>
                     <templates>
                         <t t-name="kanban-box">
                             <div t-attf-class="oe_kanban_global_click">
@@ -43,66 +45,45 @@
             </field>
         </record>
 
-        <record id="view_customer_request_form" model="ir.ui.view">
+        <record id="customer_request_view_form" model="ir.ui.view">
             <field name="name">crm.customer.request.form</field>
             <field name="model">crm.customer.request</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
                         <group>
-                            <field name="product_id"/>
+                            <field name="product_id" options="{'no_create': True}"/>
                             <field name="opportunity_id"/>
                             <field name="date"/>
                             <field name="qty"/>
+                            <field name="description"/>
                         </group>
                     </sheet>
                 </form>
             </field>
         </record>
 
-        <record id="action_customer_request" model="ir.actions.act_window">
+        <record id="customer_request_action" model="ir.actions.act_window">
             <field name="name">Customer Requests</field>
             <field name="res_model">crm.customer.request</field>
             <field name="view_mode">tree,kanban,form</field>
             <field name="context">{'create': False, 'edit': False, 'delete': False}</field>
         </record>
 
-        <record id="menu_opportunity" model="ir.ui.menu">
+<!--        <record id="menu_opportunity" model="ir.ui.menu">
             <field name="name">Opportunity</field>
             <field name="sequence" eval="20"/>
         </record>
-
-        <record id="menu_customer_request" model="ir.ui.menu">
+-->
+        <record id="customer_request_menu" model="ir.ui.menu">
             <field name="name">Manage Customer Requests</field>
-            <field name="action" ref="action_customer_request"/>
+            <field name="action" ref="customer_request_action"/>
             <field name="sequence" eval="30"/>
-            <field name="parent_id" ref="menu_opportunity"/>
+            <field name="parent_id" ref="crm.crm_menu_root"/>
         </record>
 
-        <menuitem id="crm_customer_request_root"
-		name="CRM Customer Request"
-		sequence="10"/>
+        <menuitem id="customer_request_menu" name="Customer Requests"  parent="crm.crm_menu_root"
+                  action="customer_request_action"/>
 
-        <menuitem id="customer_request_root"
-		name="Customer Request"
-		parent="crm_customer_request_root"
-		sequence="10"/>
-
-        <menuitem id="customer_request"
-		name="Customer Request"
-		parent="crm_customer_request_root"
-		action="action_customer_request"
-		sequence="10"/>
-
-        <menuitem id="menu_opportunity_root"
-		name="opportunity"
-		parent="customer_request_root"
-		sequence="10"/>
-
-	    <menuitem id="menu_customer_request"
-		name="Customer Request"
-		parent="menu_opportunity_root"
-		action="action_customer_request"
-		sequence="10"/>
     </data>
 </odoo>
