--- a/crm_customer_request/wizard/crm_lead_excel_view.xml
+++ b/crm_customer_request/wizard/crm_lead_excel_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
        <record id="crm_lead_excel_view_form" model="ir.ui.view">
-           <field name="name">crm.lead.excel.form</field>
+           <field name="name">crm.lead.excel.form.inherit</field>
            <field name="model">crm.lead.excel</field>
            <field name="arch" type="xml">
                <form string="Import Excel">
@@ -24,6 +24,7 @@
            <field name="res_model">crm.lead.excel</field>
            <field name="view_mode">form</field>
            <field name="view_id" ref="crm_lead_excel_view_form" />
+<!--           <field name="view_id" ref="view_crm_lead_form_inherit"/> -->
            <field name="target">new</field>
        </record>
 
@@ -31,15 +32,17 @@
            name="Import Customers"
            action="crm_lead_excel_action"
            parent="crm.crm_menu_root"/>
-<!--
-    <record id="view_crm_lead_form_inherit" model="ir.ui.view">
-        <field name="name">crm.lead.form.excel.inherit</field>
-        <field name="model">crm.lead</field>
-        <field name="inherit_id" ref="crm.crm_lead_view_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//header" position="inside">
-                <button name="action_import_customer" string="Import Excel" type="object" class="btn-primary"/>
-            </xpath>
-        </field>
-    </record>-->
+
+        <record id="view_crm_lead_form_inherit" model="ir.ui.view">
+            <field name="name">crm.lead.tree.excel.inherit</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="crm.crm_case_tree_view_oppor"/>
+            <field name="arch" type="xml">
+                <xpath expr="//tree" position="inside">
+                    <header>
+                        <button name="action_import_customer" string="Import Excel" type="object" class="btn-primary"/>
+                    </header>
+                </xpath>
+            </field>
+        </record>
 </odoo>
